--- a/apache/default.conf
+++ b/apache/default.conf
@@ -2,7 +2,8 @@
     DocumentRoot /var/www/public
 
     <Directory /var/www/public>
-        AllowOverride None
+        AllowOverride All
+        require all granted
         Order Allow,Deny
         Allow from All
 
