--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,30 +15,19 @@ services:
   php:
     container_name: php
     build:
-      context: ./php
+      context: ./app
     ports:
-      - 8080:80
-      - 8443:443
+      - "8080:80"
+      - "8443:443"
+    restart: always
     volumes:
       - ./apache/default.conf:/etc/apache2/sites-enabled/000-default.conf
       - ./apache/default-ssl.conf:/etc/apache2/sites-enabled/000-default-ssl.conf
       - ./etc/ssl:/etc/ssl
-      - ./app:/var/www
-    restart: always
     depends_on:
       - database
-  phpma:
-    image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
-    environment:
-      PMA_ARBITRARY: 1
-      PMA_HOST: database
-      PMA_USER: root 
-      PMA_PASSWORD: secret
-      UPLOAD_LIMIT: 20M
-    ports:
-      - 8899:80
-    restart: always
+      - mongo
+
   mailhog:
     image: mailhog/mailhog
     logging:
@@ -56,13 +45,3 @@ services:
     volumes:
       - ./mongodb:/data/db
     restart: always
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-      ME_CONFIG_BASICAUTH: false
